<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_gravity="fill"
    android:layout_weight="1"    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_columnSpan="2"/>
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
         app:srcCompat="@drawable/flag" />

    <Button
        android:id="@+id/button3"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"

        android:text="@string/but" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/check" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="216dp"
        android:layout_height="39dp"
        android:layout_row="2"


        android:text="@string/Switch" />

    <EditText
        android:id="@+id/Edit"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="20sp" />


</GridLayout>