<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="194dp"
        android:layout_height="72dp"
        android:layout_gravity="fill"
        android:text="@string/but"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="182dp"
        android:layout_gravity="fill"
        app:srcCompat="@drawable/flag"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignStart="@+id/button2"
        android:text="@string/check" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="216dp"
        android:layout_height="39dp"
         android:layout_below="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/Edit"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="20sp" />




</RelativeLayout>

